dealt with singleton leagues

--- a/app/client/templates/modals/FullActiveLeagueDetails.html
+++ b/app/client/templates/modals/FullActiveLeagueDetails.html
@@ -12,6 +12,7 @@
   				</div>
 
   				<div class="modal-body">
+            <!-- TODO: add an admin messages box -->
             {{#if acceptingNewMembers}}
               <ul>
                 <li>League name: {{leagueName}}</li>
