--- a/app/client/templates/bits/KillerChoiceWidget.html
+++ b/app/client/templates/bits/KillerChoiceWidget.html
@@ -1,22 +1,25 @@
 <template name="KillerChoiceWidget">
   <div id="KillerChoiceWidget">
-    {{#if chosenTeamName}}
-      <form id="REPICK_{{this._id}}" class="repickChoiceForm">
-        <span>You picked: {{chosenTeamName}}</span>
-        <!-- TODO: change whole template based on updating/active -->
-        <button disabled={{disablePickButtons}} type="submit">Change your pick</button>
-      </form>
+    {{#if equals currentGameStatus "active"}}
+      <span>You picked: {{chosenTeamName}}</span>
     {{else}}
-      <form class="killerChoiceForm">
-        <span>Pick a team</span>
-        <select disabled={{disablePickButtons}} class="teamsLeftDropDown" id="DD_{{this._id}}">
-          <option selected="true" disabled>Pick this week's team</option>
-          {{#each teamsLeft}}
-            <option value={{.}}>{{.}}</option>
-          {{/each}}
-        </select>
-        <button disabled={{disablePickButtons}} type="submit" name="killerChoiceButton" value="Submit"></button>
-      </form>
+      {{#if chosenTeamName}}
+        <form id="REPICK_{{this._id}}" class="repickChoiceForm">
+          <span>You picked: {{chosenTeamName}}</span>
+          <button disabled={{disablePickButtons}} type="submit">Change your pick</button>
+        </form>
+      {{else}}
+        <form class="killerChoiceForm">
+          <span>Pick a team</span>
+          <select disabled={{disablePickButtons}} class="teamsLeftDropDown" id="DD_{{this._id}}">
+            <option selected="true" disabled>Pick this week's team</option>
+            {{#each teamsLeft}}
+              <option value={{.}}>{{.}}</option>
+            {{/each}}
+          </select>
+          <button disabled={{disablePickButtons}} type="submit" name="killerChoiceButton" value="Submit">Submit</button>
+        </form>
+      {{/if}}
     {{/if}}
   </div>
 </template>
