datetimepicker added to autoform for deadline

--- a/app/client/templates/input/MatchesForm.html
+++ b/app/client/templates/input/MatchesForm.html
@@ -4,6 +4,7 @@
     <fieldset>
       {{> afQuickField name="gameWeek"}}
       {{> afQuickField name="matches"}}
+      {{> afQuickField name="deadline"}}
     </fieldset>
     <button type="submit" class="btn btn-primary">Insert</button>
     {{/autoForm}}
