--- a/app/client/templates/modals/FullActiveLeagueDetails.html
+++ b/app/client/templates/modals/FullActiveLeagueDetails.html
@@ -20,7 +20,7 @@
                 {{#if equals round 0}}
                   <li>The first round of games for this league is on {{gameWeekDateFormatted dateStarting}}</li>
                 {{else}}
-                  <li>Deadline: invite friends and make your choices by {{currentDeadline}}</li>
+                  <li>Deadline: invite friends and make your choices by {{deadline}}</li>
                 {{/if}}>
 
                 <!-- TODO: mailto solution AND deadline-->
