--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -27,7 +27,7 @@
                     </p>
                   </div>
                   {{> afQuickField name="leagueName" placeholder="Give your league a name"}}
-                  {{> afQuickField name="dateStarting" type="select" options="allowed"}}
+                  {{> afQuickField name="dateStarting" type="select" options=pLGameweeksRemainingOptions}}
                 </fieldset>
                 <button id="showPreviewButton" type="button" class="btn btn-primary">Start your league!</button>
               </div>
