added format date helper

--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -5,7 +5,7 @@
         <thead>
           <tr>
             <th>League name</th>
-            <th>Pick for gameweek {{gameWeekDateFormatted currentGameWeek}}</th>
+            <th>Pick for gameweek {{formatDate currentGameWeek "gameWeekDate"}}</th>
             <th>Details</th>
           </tr>
         </thead>
@@ -16,7 +16,7 @@
               <td>
                 {{> KillerChoiceWidget}}
                 {{#if equals round 0}}
-                  Starts on {{dateStarting}}
+                  (Starts on {{formatDate dateStarting "gameWeekDate"}})
                 {{/if}}
               </td>
               <td>{{> MiniActiveLeagueDetails}}</td>
