--- a/app/client/templates/modals/JoinKillerLeague.html
+++ b/app/client/templates/modals/JoinKillerLeague.html
@@ -53,7 +53,7 @@
     </p>
     <ul>
       <li>You are joining a league called {{leagueName}}</li>
-      <li>The first round of games for this league is played on {{dateStarting}}</li>
+      <li>First round deadline: {{formatDate leagueDeadline "deadlineDate"}}</li>
       <li>The chairman of this league is {{chairmanName}} </li>
     </ul>
     <button type="submit" class="btn btn-primary" id="confirmJoinLeagueButton">Confirm</button>
@@ -69,12 +69,12 @@
     </p>
     <div>
       <ul>
-        <li>Click here to open an email pre-filled with all the details</li>
-        <li>Use the sharing links below</li>
-        <li>Send them your unique league code however you like </li>
+        <li>Invite your friends using the sharing buttons below</li>
+        <li>Or send them the league code however you like: {{_id}}</li>
+        <li>First round deadline: {{formatDate leagueDeadline "deadlineDate"}}</li>
       </ul>
       <ul class="sharingButtonsList">
-        <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
+        <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
         <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
         <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
       </ul>
