--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -10,6 +10,7 @@
           </tr>
         </thead>
         <tbody>
+          <!-- TODO: if no leagues, display instructions -->
           {{#each userAliveLeaguesList}}
             <tr>
               <td><button class="btn leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">{{leagueName}}</button></td>
