added league code to start success page

--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -84,7 +84,7 @@
       <ul>
         <ul>
           <li>Invite your friends using the sharing buttons below</li>
-          <li>Or send them the league code however you like: {{_id}}</li>
+          <li>Or send them the league code however you like: {{newLeagueCode}}</li>
           <li>First round deadline: {{formatDate newLeagueDeadline "deadlineDate"}}</li>
         </ul>
       </ul>
