added ludicrous leading zeros to leagueDeadline. Ludicrous

--- a/app/client/templates/leagues/MiniActiveLeagueDetails.html
+++ b/app/client/templates/leagues/MiniActiveLeagueDetails.html
@@ -1,6 +1,7 @@
 <template name="MiniActiveLeagueDetails">
   <div id="MiniActiveLeagueDetails">
     <!-- TODO: change to just start date if not started -->
+    <!-- TODO: add deadline -->
     <ul>
       <li>Round: {{round}}</li>
       <li>Players left/started: {{playersLeft}} / {{playersStarted}}</li>
