fixed league starting round and displaying deadline on success

--- a/app/client/templates/modals/StartKillerLeague.html
+++ b/app/client/templates/modals/StartKillerLeague.html
@@ -73,7 +73,7 @@
 <template name="StartLeagueSuccess">
   <div id="StartLeagueSuccess">
     <h3>Success!</h3>
-    <!-- TODO: add deadline for games -->
+    <!-- TODO: add deadline for games by changing the entire flow of this hacky thing-->
     <p>
       League "{{insertDoc.leagueName}}" has been successfully created - now you can invite your friends
     </p>
