fixed singleton deferring gw and display picks

--- a/app/client/templates/input/DeadlineMethods.html
+++ b/app/client/templates/input/DeadlineMethods.html
@@ -4,6 +4,7 @@
       Current status is: {{currentGameStatus}}
     </p>
     <button id="toggleUpdatingButton">Set to update</button>
-    <button id="startMatchesButton">Big Red button</button>
+    <button id="startMatchesButton">Start matches</button>
+    <button id="nextGameWeekButton">Process winners</button>
   </div>
 </template>
