fixed deadline display if singleton

--- a/app/client/templates/leagues/MiniActiveLeagueDetails.html
+++ b/app/client/templates/leagues/MiniActiveLeagueDetails.html
@@ -2,6 +2,7 @@
   <div id="MiniActiveLeagueDetails">
     <!-- TODO: change to just start date if not started -->
     <!-- TODO: add deadline -->
+    <!-- TODO: remove round if not started -->
     <ul>
       <li>Round: {{round}}</li>
       <li>Players left/started: {{playersLeft}} / {{playersStarted}}</li>
