--- a/app/client/templates/bits/KillerChoiceWidget.html
+++ b/app/client/templates/bits/KillerChoiceWidget.html
@@ -1,25 +1,35 @@
 <template name="KillerChoiceWidget">
   <div id="KillerChoiceWidget">
     {{#if equals currentGameStatus "active"}}
-      <span>You picked: {{chosenTeamName}}</span>
+      {{#if chosenTeamName}}
+        <span>You picked: {{chosenTeamName}}</span>
+      {{else}}
+        {{> KillerChoiceForm}}
+      {{/if}}
     {{else}}
       {{#if chosenTeamName}}
         <form id="REPICK_{{this._id}}" class="repickChoiceForm">
           <span>You picked: {{chosenTeamName}}</span>
-          <button disabled={{disablePickButtons}} type="submit">Change your pick</button>
+          <button type="submit">Change your pick</button>
         </form>
       {{else}}
-        <form class="killerChoiceForm">
-          <span>Pick a team</span>
-          <select disabled={{disablePickButtons}} class="teamsLeftDropDown" id="DD_{{this._id}}">
-            <option selected="true" disabled>Pick this week's team</option>
-            {{#each teamsLeft}}
-              <option value={{.}}>{{.}}</option>
-            {{/each}}
-          </select>
-          <button disabled={{disablePickButtons}} type="submit" name="killerChoiceButton" value="Submit">Submit</button>
-        </form>
+        {{> killerChoiceForm}}
       {{/if}}
     {{/if}}
+  </div>
+</template>
+
+<template name="KillerChoiceForm">
+  <div id="killerChoiceForm">
+    <form class="killerChoiceForm">
+      <span>Pick a team</span>
+      <select class="teamsLeftDropDown" id="DD_{{this._id}}">
+        <option selected="true" disabled>Pick this week's team</option>
+        {{#each teamsLeft}}
+          <option value={{.}}>{{.}}</option>
+        {{/each}}
+      </select>
+      <button type="submit" name="killerChoiceButton" value="Submit">Submit</button>
+    </form>
   </div>
 </template>
