--- a/app/client/templates/bits/KillerChoiceWidget.html
+++ b/app/client/templates/bits/KillerChoiceWidget.html
@@ -13,7 +13,7 @@
           <button type="submit">Change your pick</button>
         </form>
       {{else}}
-        {{> killerChoiceForm}}
+        {{> KillerChoiceForm}}
       {{/if}}
     {{/if}}
   </div>
