--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -11,6 +11,7 @@
         </thead>
         <tbody>
           <!-- TODO: if no leagues, display instructions -->
+          <!-- TODO: shade dead leagues red??? And sort to bottom??-->
           {{#each userAliveLeaguesList}}
             <tr>
               <td><button class="btn leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">{{leagueName}}</button></td>
