--- a/app/client/templates/leagues/KillerLeagues.html
+++ b/app/client/templates/leagues/KillerLeagues.html
@@ -7,6 +7,7 @@
         Leagues updating!
       </p>
     {{else}}
+    <!-- TODO: add toggle for alive/dead leagues -->
       {{> KillerAliveLeagues}}
       {{> KillerFinishedLeagues}}
     {{/if}}
