--- a/app/client/templates/KillerFooter.html
+++ b/app/client/templates/KillerFooter.html
@@ -1,5 +1,25 @@
 <template name="KillerFooter">
   <div id="KillerFooter">
-    FOOTER
+    <!-- TODO: make sharing buttons into a template -->
+    <footer class="footer">
+      <div class="footerLeft">
+        killerDOTfootball is a company registered in England & Wales
+        <br>
+        Registered number: 09948604
+        <br>
+        Registered office: 14, Palmers Road, London, E2 0SY
+        <br>
+        Contact: <a href="mailto:chairman@killer.football?subject=Query">chairman@killer.football</a>
+      </div>
+      <div class="footerRight">
+        <ul class="sharingButtonsList">
+          <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Challenge+me+on+killerDOTfootball%3A" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
+          <li><a class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
+          <!-- TODO: change ID to class and add mailto -->
+          <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
+        </ul>
+      </div>
+    </footer>
+
   </div>
 </template>
