added finished leagues table

--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -12,7 +12,7 @@
         <tbody>
           <!-- TODO: if no leagues, display instructions -->
           <!-- TODO: shade dead leagues red??? And sort to bottom??-->
-          {{#each userAliveLeaguesList}}
+          {{#each this}}
             <tr>
               <td><button class="btn leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">{{leagueName}}</button></td>
               <td>
