--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -4,7 +4,8 @@
       <table id="KillerAliveTable" class="table table-hover">
         <thead>
           <tr>
-            <th>League name</th>
+            <!-- TODO: give span below class of small text -->
+            <th>League name<br><span>(Tap for more details)</span></th>
             <th>Pick for gameweek {{formatDate currentGameWeek "gameWeekDate"}}</th>
             <th>Details</th>
           </tr>
