--- a/app/client/templates/KillerExplanation.html
+++ b/app/client/templates/KillerExplanation.html
@@ -1,5 +1,18 @@
 <template name="KillerExplanation">
   <div id="KillerExplanation">
-    This i swhat killer all about
+    <div class="jumbotron">
+      <h3>killer <i class="fa fa-futbol-o fa-2"></i> football</h3>
+      <img class="bigLogo" src="https://s3-eu-west-1.amazonaws.com/killerpicks/killerZip.png" alt="Logo" />
+      <p class="lead">
+        killer is a new, <b>free</b> football predictions game to play with friends, family, and colleagues.
+      </p>
+      <p class="smaller-font">
+        Getting started is easy: set up a free league, invite your friends, pick one team to win over the weekend's Premier League action, and that's it! Get it right and you live to play for another week. Get it wrong, and it's game over!
+      </p>
+      <p><button class="btn modalButton" data-modal="modalSignupForm">Sign up now</button></p>
+      <p>
+        For more details check out the <b>Getting Started</b> or <b>Full rules</b> links above, or email <a href="mailto:chairman@killer.football?subject=help">chairman@killer.football</a>.
+      </p>
+    </div>
   </div>
 </template>
