--- a/app/client/templates/Navbar.html
+++ b/app/client/templates/Navbar.html
@@ -1,39 +1,45 @@
 <template name="Navbar">
   <div id="KillerNavbar">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#KillerNavbar" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">LOGO HERE</a>
-        </div>
+    <div class="clearfix">
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".collapsingMenu" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">LOGO HERE</a>
+          </div>
 
-        {{#if currentUser}}
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-left">
-              <li><button class="btn modalButton" data-modal="modalStartKillerLeague" id="buttonStartKillerLeague">Start a league</button></li>
-              <li><button class="btn modalButton" data-modal="modalJoinKillerLeague" id="buttonJoinKillerLeague">Join a league</button></li>
-              <li><button class="btn modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Rules</button></li>
-              <li><button class="btn modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</button></li>
-            </ul>
+          {{#if currentUser}}
+            <div class="collapse navbar-collapse collapsingMenu">
+              <ul class="nav navbar-nav navbar-left">
+                <li><button class="btn modalButton" data-modal="modalStartKillerLeague" id="buttonStartKillerLeague">Start a league</button></li>
+                <li><button class="btn modalButton" data-modal="modalJoinKillerLeague" id="buttonJoinKillerLeague">Join a league</button></li>
+                <li><button class="btn modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</button></li>
+                <li><button class="btn modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</button></li>
+              </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-              <li>{{> MyKillerAccount}}</li>
-            </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li>{{> MyKillerAccount}}</li>
+              </ul>
 
-          </div><!-- /.navbar-collapse -->
-        {{else}}
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><button class="btn modalButton" data-modal="modalLoginForm">Log in</button></li>
-          </ul>
-        </div>
-        {{/if}}
-      </div><!-- /.container-fluid -->
-    </nav>
+            </div><!-- /.navbar-collapse -->
+          {{else}}
+            <div class="collapse navbar-collapse collapsingMenu">
+              <ul class="nav navbar-nav navbar-left">
+                <li><button class="btn modalButton" data-modal="modalKillerRules" id="buttonKillerRules">Full rules</button></li>
+                <li><button class="btn modalButton" data-modal="modalGettingStarted" id="buttonGettingStarted">Getting started</button></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><button class="btn modalButton" data-modal="modalLoginForm">Log in</button></li>
+              </ul>
+            </div>
+          {{/if}}
+        </div><!-- /.container-fluid -->
+      </nav>
+    </div>
   </div>
 </template>
