--- a/app/client/main.css
+++ b/app/client/main.css
@@ -1,3 +1,7 @@
+html, body {
+  font-family: "Roboto Slab", serif;
+}
+
 body {
   /* Margin bottom by footer height */
   /*margin-bottom: 60px;*/
@@ -10,6 +14,10 @@ body {
 
 .bigLogo {
   max-height : 100px;
+}
+
+.killer-dot {
+  font-size: 50%;
 }
 
 .disabled {
