--- a/app/client/templates/KillerContent.html
+++ b/app/client/templates/KillerContent.html
@@ -7,9 +7,13 @@
         {{#if currentUser}}
           {{> KillerAdBannerTop}}
           {{> KillerAdBannerLeft}}
-          {{> KillerGameweekMatches}}
-          {{> KillerInstructions}}
-          {{> KillerLeagues}}
+          {{#if Template.subscriptionsReady}}
+            {{> KillerGameweekMatches}}
+            {{> KillerInstructions}}
+            {{> KillerLeagues}}
+          {{else}}
+            {{> spinner}}
+          {{/if}}
           {{> KillerAdBannerRight}}
         {{else}}
           {{> SignUpLogIn}}
