--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -1,7 +1,7 @@
 <template name="KillerAliveLeagues">
   <div id="KillerAliveLeagues">
     <div class="table-responsive table-wrapper">
-      <table id="KillerAliveTable" class="table table-hover">
+      <table id="KillerAliveTable" class="table table-hover leagueTable">
         <thead>
           <tr>
             <!-- TODO: give span below class of small text -->
