--- a/app/client/main.css
+++ b/app/client/main.css
@@ -40,6 +40,10 @@ body {
   margin-bottom: 0;
 }
 
+.leagueTable {
+  table-layout: auto;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
