--- a/app/client/main.css
+++ b/app/client/main.css
@@ -45,6 +45,17 @@ body {
   /*background-color: green;*/
 }
 
+@media only screen and (min-width : 768px) {
+   .leagueRow.row {
+	 display: flex;
+	 flex-wrap: wrap;
+   }
+   .leagueRow.row > [class*='col-'] {
+	 display: flex;
+	 flex-direction: column;
+   }
+}
+
 /* TODO: Is this needed? */
 .leagueCol {
   display: inline-block;
