--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -3,18 +3,17 @@
     <div class="container-fluid">
           <!-- TODO: if no leagues, display instructions -->
       {{#each this}}
-        <div class ="row leagueRow">
-          <div class="panel panel-success">
-            <div class="panel-heading">
-              <h3 class="panel-title">League: <span class="league-name">{{leagueName}}</span></h3>
-            </div>
-            <div class="panel-body">
+          <!-- TODO: contextual classes -->
+        <div class="panel panel-success">
 
-              <div class="col-xs-12 col-md-4">
-                <button class="btn leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">Details</button>
-              </div>
+          <div class="panel-heading">
+            <h3 class="panel-title">League: <span class="league-name">{{leagueName}}</span></h3>
+          </div>
 
-              <div class="col-xs-12 col-md-4">
+          <div class="panel-body">
+
+            <div class ="row leagueRow row-eq-height">
+              <div class="col-xs-12 col-lg-6 full-height">
                 <div class="leagueText">
                   {{> KillerChoiceWidget}}
                   {{#if acceptingNewMembers}}
@@ -23,15 +22,42 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-md-4">
+              <div class="col-xs-12 col-lg-6 full-height">
                 <div class="leagueText">
                   {{> MiniActiveLeagueDetails}}
                 </div>
               </div>
+
+              <div class="col-xs-12 col-lg-6 full-height">
+                <button class="btn btn-primary leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">Details</button>
+                <p>League in more depth</p>
+              </div>
+
+              <div class="col-xs-12 col-lg-6 full-height">
+                <ul class="sharingButtonsList">
+                  <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
+                  <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
+                  <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
+                </ul>
+              </div>
+
             </div>
           </div>
         </div>
       {{/each}}
     </div>
+  </div>
+</template>
+
+<template name="MiniActiveLeagueDetails">
+  <div id="MiniActiveLeagueDetails">
+    <!-- TODO: change to just start date if not started -->
+    <!-- TODO: add deadline -->
+    <!-- TODO: remove round if not started -->
+    <ul>
+      <li>Round: {{round}}</li>
+      <!-- TODO: if not started show how many joined -->
+      <li>Players left/started: {{playersLeft}} / {{playersStarted}}</li>
+    </ul>
   </div>
 </template>
