--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -2,8 +2,8 @@
   <div id="KillerAliveLeagues">
     <div class="container-fluid">
           <!-- TODO: if no leagues, display instructions -->
-      {{#each this}}
           <!-- TODO: contextual classes -->
+      {{#each this}}
         <div class="panel panel-success">
 
           <div class="panel-heading">
@@ -16,9 +16,6 @@
               <div class="col-xs-12 col-lg-6 full-height">
                 <div class="leagueText">
                   {{> KillerChoiceWidget}}
-                  {{#if acceptingNewMembers}}
-                    <span>(Starts on {{formatDate leagueDeadline "gameWeekDate"}})</span>
-                  {{/if}}
                 </div>
               </div>
 
@@ -29,16 +26,20 @@
               </div>
 
               <div class="col-xs-12 col-lg-6 full-height">
-                <button class="btn btn-primary leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">Details</button>
-                <p>League in more depth</p>
+                <div class="leagueText">
+                  <button class="btn btn-primary leagueDetailsButton" data-modal="modalFullActiveLeagueDetails">Details</button>
+                  <p>League in more depth</p>
+                </div>
               </div>
 
               <div class="col-xs-12 col-lg-6 full-height">
-                <ul class="sharingButtonsList">
-                  <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
-                  <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
-                  <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
-                </ul>
+                <div class="leagueText">
+                  <ul class="sharingButtonsList">
+                    <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
+                    <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
+                    <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
+                  </ul>
+                </div>
               </div>
 
             </div>
@@ -51,13 +52,15 @@
 
 <template name="MiniActiveLeagueDetails">
   <div id="MiniActiveLeagueDetails">
-    <!-- TODO: change to just start date if not started -->
-    <!-- TODO: add deadline -->
-    <!-- TODO: remove round if not started -->
     <ul>
-      <li>Round: {{round}}</li>
-      <!-- TODO: if not started show how many joined -->
-      <li>Players left/started: {{playersLeft}} / {{playersStarted}}</li>
+      {{#if acceptingNewMembers}}
+        <li>{{playersStarted}} players have joined</li>
+        <li>Deadline: {{formatDate leagueDeadline "deadlineDate"}}</li>
+        <li>Entry code: <span class="entry-code">{{_id}}</span></li>
+      {{else}}
+        <li>Round: {{round}}</li>
+        <li>Players left/started: {{playersLeft}} / {{playersStarted}}</li>
+      {{/if}}
     </ul>
   </div>
 </template>
