--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -7,7 +7,7 @@
         <div class="panel panel-success">
 
           <div class="panel-heading">
-            <h3 class="panel-title">League: <span class="league-name">{{leagueName}}</span></h3>
+            <h3 class="panel-title">League: <span class="league-name">"{{leagueName}}"</span><span class="panel-deadline pull-right">Deadline: {{formatDate leagueDeadline "deadlineDate"}}</span></h3>
           </div>
 
           <div class="panel-body">
@@ -35,9 +35,9 @@
               <div class="col-xs-12 col-lg-6 full-height">
                 <div class="leagueText">
                   <ul class="sharingButtonsList">
-                    <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i> Twitter</a></li>
-                    <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i> Facebook</a></li>
-                    <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i> Email</a></li>
+                    <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i></a></li>
+                    <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i></a></li>
                   </ul>
                 </div>
               </div>
@@ -59,7 +59,6 @@
         {{else}}
           <li>{{playersStarted}} players have joined</li>
         {{/if}}
-        <li>Deadline: {{formatDate leagueDeadline "deadlineDate"}}</li>
         <li>Entry code: <span class="entry-code">{{_id}}</span></li>
       {{else}}
         <li>Round: {{round}}</li>
