added invite friends links to panel

--- a/app/client/main.css
+++ b/app/client/main.css
@@ -150,6 +150,10 @@ text-align: center;
   display: inline;
 }
 
+.display-inline {
+  display: inline;
+}
+
 .btn-twitter {
     background: #00acee;
     border-radius: 0;
