--- a/app/client/templates/leagues/KillerAliveLeagues.html
+++ b/app/client/templates/leagues/KillerAliveLeagues.html
@@ -79,13 +79,16 @@
           </div>
         {{/unless}}
 
-        <div class="col-xs-12 col-lg-12 col-md-12">
-          <ul class="sharingButtonsList">
-            <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i></a></li>
-            <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i></a></li>
-          </ul>
-        </div>
+        {{#if acceptingNewMembers}}
+          <div class="col-xs-12 col-lg-12 col-md-12">
+            <span>Invite friends: </span>
+            <ul class="sharingButtonsList display-inline">
+              <li><a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fkiller.football&text=Join+my+league+on+killerDOTfootball+-+entry+code%3A+{{_id}}" class="btn btn-default btn-twitter"><i class="fa fa-twitter"></i></a></li>
+              <li><a id="facebookNewLeagueShare" class="btn btn-default btn-facebook facebookShare"><i class="fa fa-facebook"></i></a></li>
+              <li><a id="emailNewLeagueShare" class="btn btn-default btn-email"><i class="fa fa-envelope"></i></a></li>
+            </ul>
+          </div>
+        {{/if}}
 
       </div>
     </div>
